add meta description and title
Signed-off-by: Nweke Chidi <nwekechidigodwin460@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>myShup | eCommerce Store</title>
+  <meta name="description"
+    content="Discover a wide range of high-quality products at [Your Store Name]. From electronics to fashion and more, we offer the latest trends and best deals. Shop now for a seamless online shopping experience.">
+
 </head>
 
 <body>
